--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 		<meta charset="UTF-8">
 		<title>我的个人简历</title>
 	</head>
-	<body>
+	<body background="background1.jpg"style=" background-repeat:no-repeat ;background-size:100% 100%;background-attachment: fixed;">
+		<font color="#FFFFFF">
 		<h1>我就是我，是颜色不一样的材料———施磊</h1>
 		<p>I'm hosted with GitHub Pages.</p>
 		<h4>PS:</h4>图片、视屏闭上眼就可以“眼不见心不烦”，但音频不是，无论你想不想听，声音都会进到你的耳朵，
 		<br />为了你我的身心健康，我尽量少使用音频。
+		</font> 
 	</body>
 </html>
