--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 		<meta charset="UTF-8">
 		<title>我的个人简历</title>
 	</head>
-	<body background="background1.jpg"style=" background-repeat:no-repeat ;background-size:100% 100%;background-attachment: fixed;">
+	<body background="background1.jpg"style="background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size:cover;">
 		<font color="#FFFFFF">
 		<h1>我就是我，是颜色不一样的材料———施磊</h1>
 		<p>I'm hosted with GitHub Pages.</p>
