--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="zh-CN">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>我的个人简历</title>
 	</head>
 	<body background="background1.jpg"style="background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size:cover;">
-		<font color="#FFFFFF">
+		<font color="#000000">
 		<h1>我就是我，是颜色不一样的材料———施磊</h1>
 		<p>I'm hosted with GitHub Pages.</p>
 		<h4>PS:</h4>图片、视屏闭上眼就可以“眼不见心不烦”，但音频不是，无论你想不想听，声音都会进到你的耳朵，
 		<br />为了你我的身心健康，我尽量少使用音频。
-		</font> 
+		</font>
+	<!--<img src="background1.jpg" alt="图片加载不出来">-->
 	</body>
 </html>
