--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size:cover;">
-		<font color="#000000">
+		<font color="#FFFFFF">
 		<h1>我就是我，是颜色不一样的材料———施磊</h1>
 		<p>I'm hosted with GitHub Pages.</p>
 		<h4>PS:</h4>图片、视屏闭上眼就可以“眼不见心不烦”，但音频不是，无论你想不想听，声音都会进到你的耳朵，
 		<br />为了你我的身心健康，我尽量少使用音频。
 		</font>
-	<!--<img src="background1.jpg" alt="图片加载不出来">-->
+	<!--<img src="background1.jpg" alt="图片加载不出来" title="星空" width="1100" height="825">-->
 	</body>
 </html>
