--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>我的个人简历</title>
 	</head>
-	<body background="background1.jpg"style="background-position: center;
+	<body background="picture/background1.jpg" style="background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size:cover;">
 		<font color="#FFFFFF">
 		<h1>我就是我，是颜色不一样的材料———施磊</h1>
 		<p>I'm hosted with GitHub Pages.</p>
+		<a href="https://github.com/shilei31415/AutoDrive">我写过的代码</a>
 		<h4>PS:</h4>图片、视屏闭上眼就可以“眼不见心不烦”，但音频不是，无论你想不想听，声音都会进到你的耳朵，
 		<br />为了你我的身心健康，我尽量少使用音频。
 		</font>
