--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>我的个人简历</title>
-	</head>
-	<body background="picture/background1.jpg" style="background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size:cover;">
-		<font color="#FFFFFF">
-		<h1>我就是我，是颜色不一样的材料———施磊</h1>
-		<p>I'm hosted with GitHub Pages.</p>
-		<a href="https://github.com/shilei31415/AutoDrive">我写过的代码</a>
-		<h4>PS:</h4>图片、视屏闭上眼就可以“眼不见心不烦”，但音频不是，无论你想不想听，声音都会进到你的耳朵，
-		<br />为了你我的身心健康，我尽量少使用音频。
-		</font>
-	<!--<img src="background1.jpg" alt="图片加载不出来" title="星空" width="1100" height="825">-->
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>我就是我，是颜色不一样的材料———施磊</title>
+</head>
+<body>
+<font color="#000000">
+    <h1>我就是我，是颜色不一样的材料———施磊</h1><br>
+    1.<a href="#resume">我的个人简历</a><br>
+    2.<a href="#">我会的技能</a><br>
+    3.<a href="https://github.com/shilei31415/AutoDrive">我写过的代码</a><br>
+    4.<a href="#">我获得的奖状</a><br>
+    <br>
+    <br>
+    <br>
+    <a id="resume">
+    <h2>我的个人简历</h2>
+    </a>
+    <table align="center" border="2" cellpadding="10" cellspacing="0" width="700">
+        <tr><td>姓名</td> <td>施磊</td> <td>性别</td> <td>男</td></tr>
+        <tr><td>联系方式</td> <td>18851093443</td> <td colspan="2"></td></tr>
+    </table>
+    <h4>PS:</h4>
+    <p>图片、视屏闭上眼就可以“眼不见心不烦”，但音频不是，无论你想不想听，声音都会进到你的耳朵，
+        为了你我的身心健康，我尽量少使用音频。</p>
+    <p>Thanks for GitHub.</p>
+</font>
+</body>
 </html>
