--- a/index.html
+++ b/index.html
@@ -9,20 +9,14 @@
 <body>
 <font color="#000000">
     <h1>我就是我，是颜色不一样的材料———施磊</h1><br>
-    1.<a href="#resume">我的个人简历</a><br>
-    2.<a href="#">我会的技能</a><br>
+    1.<a href="./resume.html">我的个人简历</a><br>
+    2.<a href="#">我的技能</a><br>
     3.<a href="https://github.com/shilei31415/AutoDrive">我写过的代码</a><br>
     4.<a href="#">我获得的奖状</a><br>
+	5.<a href="#">I'm reading 最近在读</a><br>
     <br>
     <br>
     <br>
-    <a id="resume">
-    <h2>我的个人简历</h2>
-    </a>
-    <table align="center" border="2" cellpadding="10" cellspacing="0" width="700">
-        <tr><td>姓名</td> <td>施磊</td> <td>性别</td> <td>男</td></tr>
-        <tr><td>联系方式</td> <td>18851093443</td> <td colspan="2"></td></tr>
-    </table>
     <h4>PS:</h4>
     <p>图片、视屏闭上眼就可以“眼不见心不烦”，但音频不是，无论你想不想听，声音都会进到你的耳朵，
         为了你我的身心健康，我尽量少使用音频。</p>
