添加个人简历

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>我就是我，是颜色不一样的材料———施磊</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div style="background:url('picture/xiaoshenke.jpg') no-repeat center;width:1080px;height:720px">
+    <div style="top:600px; position: absolute">
+        <h1 class="midel white"> A strong man can only save himself, a great man can save others. </h1>
+    </div>
+</div>
 <font color="#000000">
     <h1>我就是我，是颜色不一样的材料———施磊</h1><br>
     1.<a href="./resume.html">我的个人简历</a><br>
