--- a/resume.html
+++ b/resume.html
@@ -3,53 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>我的个人简历</title>
-    <style>
-        .main_div{
-            width: 722px;
-            height: 988px;
-            background: rgb(210,210,210);
-            margin: auto;
-            box-shadow: 0px 0px 10px 5px #555;
-        }
-        .image_div{
-            position: relative;
-            width: 240px;
-            height: 320px;
-            left: 30px;
-            top: 20px;
-            background: rgb(0,0,0);
-        }
-        .info1{
-            position: relative;
-            left: 300px;
-            top: -300px;
-        }
-        .info2{
-            position: relative;
-            width: 240px;
-            height: 200px;
-            left:30px;
-            top: -420px;
-        }
-        .info3{
-            position: relative;
-            left:30px;
-            top: -400px;
-            width: 240px;
-        }
-        .info4{
-            position: relative;
-            left:30px;
-            top:-400px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="main_div">
         <div class="image_div">
         </div>
         <div class="info1">
-            <h3>个人信息</h3>
+            <h3 class="line">个人信息</h3>
             <table>
                 <tr>
                     <td>姓名:</td> <td>施磊</td>
@@ -64,7 +25,7 @@
                 </tr>
             </table>
 
-            <h3>技能</h3>
+            <h3 class="line">技能</h3>
             <table>
                 <tr>
                     <td>专业技能:</td> <td>磨金相</td>
@@ -77,7 +38,7 @@
                 </tr>
             </table>
 
-            <h3>教育经历</h3>
+            <h3 class="line">教育经历</h3>
             <table>
                 <tr>
                     <td>学校名称:</td> <td>南京理工大学</td>
@@ -89,20 +50,20 @@
                 </tr>
             </table>
 
-            <h3>实习经历</h3>
+            <h3 class="line">实习经历</h3>
         </div>
         <div class="info2">
-            <h3>自我评价</h3>
+            <h3 class="line2">自我评价</h3>
             <p>课内,积极认真,乐于思考,勇于质疑.<br>
                 课外,具有极强的实践 团队合作能力,参加过多项机器人竞赛;具有较强的自学能力,大学四年,自学了python和html语言,通过github 哔哩哔哩自学了神经网络</p>
         </div>
         <div class="info3">
-            <h3>证书</h3>
+            <h3 class="line3">证书</h3>
             <p>balalla</p>
             <p>lalala</p>
         </div>
         <div class="info4">
-            <h3>项目经历</h3>
+            <h3 class="line3">项目经历</h3>
             <h4>项目1</h4>
             <h4>项目2</h4>
             <h4>其他项目</h4>
