--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>我的个人简历</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+    </style>
 </head>
 <body>
     <div class="main_div">
@@ -13,19 +15,22 @@
             <h3 class="line">个人信息</h3>
             <table>
                 <tr>
-                    <td>姓名:</td> <td>施磊</td>
-                    <td>邮箱:</td> <td>2055833480@qq.com</td>
+                    <td class="center">姓&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp名:</td>
+                    <td>施磊</td>
+                    <td>邮&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp箱:</td>
+                    <td>2055833480@qq.com</td>
                 </tr>
                 <tr>
-                    <td>生日:</td> <td>1999.11.29</td>
+                    <td>生&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp日:</td>
+                    <td>1999.11.29</td>
                     <td>现住城市:</td> <td>南京</td>
                 </tr>
                 <tr>
-                    <td>手机号:</td> <td>18851093443</td>
+                    <td>联系方式:</td> <td>18851093443</td>
                 </tr>
             </table>
 
-            <h3 class="line">技能</h3>
+            <h3 class="line">技&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp能</h3>
             <table>
                 <tr>
                     <td>专业技能:</td> <td>磨金相</td>
@@ -58,7 +63,7 @@
                 课外,具有极强的实践 团队合作能力,参加过多项机器人竞赛;具有较强的自学能力,大学四年,自学了python和html语言,通过github 哔哩哔哩自学了神经网络</p>
         </div>
         <div class="info3">
-            <h3 class="line3">证书</h3>
+            <h3 class="line3">证&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp书</h3>
             <p>balalla</p>
             <p>lalala</p>
         </div>
