--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
     <title>我的个人简历</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
+
     </style>
 </head>
 <body>
@@ -15,18 +16,18 @@
             <h3 class="line">个人信息</h3>
             <table>
                 <tr>
-                    <td class="center">姓&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp名:</td>
+                    <td class="duiqi">姓名:</td>
                     <td>施磊</td>
-                    <td>邮&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp箱:</td>
+                    <td class="duiqi">邮箱:</td>
                     <td>2055833480@qq.com</td>
                 </tr>
                 <tr>
-                    <td>生&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp日:</td>
+                    <td class="duiqi">生日:</td>
                     <td>1999.11.29</td>
-                    <td>现住城市:</td> <td>南京</td>
+                    <td class="duiqi">现住城市:</td> <td>南京</td>
                 </tr>
                 <tr>
-                    <td>联系方式:</td> <td>18851093443</td>
+                    <td class="duiqi">联系方式:</td> <td>18851093443</td>
                 </tr>
             </table>
 
