--- a/resume.html
+++ b/resume.html
@@ -75,5 +75,10 @@
             <h4>其他项目</h4>
         </div>
     </div>
+    <div class="secend_div">
+        <div class="info5">
+            <a href="index.html"><h2>learn more</h2></a>
+        </div>
+    </div>
 </body>
 </html>
