--- a/resume.html
+++ b/resume.html
@@ -63,16 +63,23 @@
             <p>课内,积极认真,乐于思考,勇于质疑.<br>
                 课外,具有极强的实践 团队合作能力,参加过多项机器人竞赛;具有较强的自学能力,大学四年,自学了python和html语言,通过github 哔哩哔哩自学了神经网络</p>
         </div>
-        <div class="info3">
+        <div class="info4">
             <h3 class="line3">证&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp书</h3>
-            <p>balalla</p>
-            <p>lalala</p>
+            <p>普通话二级甲等&nbsp&nbsp&nbsp&nbsp
+                计算机二级&nbsp&nbsp&nbsp&nbsp
+                英语四级&nbsp&nbsp&nbsp&nbsp
+                其他竞赛奖状&nbsp&nbsp&nbsp&nbsp
+                奖学金</p>
         </div>
         <div class="info4">
-            <h3 class="line3">项目经历</h3>
-            <h4>项目1</h4>
-            <h4>项目2</h4>
-            <h4>其他项目</h4>
+            <h3 class="line3">竞赛经历</h3>
+            <a href="https://github.com/shilei31415/AutoDrive"><h4>无人车多车交互</h4></a>
+            <p>2019江苏省机器人大赛项目之一,无人车多车交互,我负责实现无人车的"视觉".</p>
+            <p>具体如下:1.实现道路标线的识别,并计算出车体的偏离;&nbsp&nbsp 2识别出道路中的斑马先区域;&nbsp&nbsp 3视觉系统与电控系统的通信</p>
+            <a href="https://github.com/shilei31415/shilei31415.github.io"><h4>个人网站</h4></a>
+            <p>大学期间我建立了一个介绍自己的网站.</p>
+            <p>具体如下:1.通过CLion在本地建立相关网页;&nbsp&nbsp 2.通过git上传至网络</p>
+            <a href="https://github.com/shilei31415"><h4>其他项目</h4></a>
         </div>
     </div>
     <div class="secend_div">
