--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
                     <td>编程技能:</td> <td>C/C++ python 人工神经网络 网页设计</td>
                 </tr>
                 <tr>
-                    <td>其他技能:</td> <td>arduino SolidWorks AutoCAD VisualStudio</td>
+                    <td>其他技能:</td> <td>arduino SolidWorks AutoCAD CLion</td>
                 </tr>
             </table>
 
@@ -55,8 +55,13 @@
                     <td>学历学位:</td> <td>本科</td>
                 </tr>
             </table>
+            <div class="info6">
+                <h3 class="line">实习经历</h3>
+                <p>2019年暑假,参加了学校组织的实习.
+                    在南京中电熊猫液晶显示科技有限公司作为一个普通技术职员,
+                    了解了大型企业的管理制度,学习到液晶显示的基本原理.对今后纳米材料的学习有很大帮助</p>
 
-            <h3 class="line">实习经历</h3>
+            </div>
         </div>
         <div class="info2">
             <h3 class="line2">自我评价</h3>
