--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
         </div>
         <div class="info1">
             <h3 class="line">个人信息</h3>
-            <table>
+            <table width="480px">
                 <tr>
                     <td class="duiqi">姓名:</td>
                     <td>施磊</td>
@@ -32,7 +32,7 @@
             </table>
 
             <h3 class="line">技&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp能</h3>
-            <table>
+            <table width="480px">
                 <tr>
                     <td>专业技能:</td> <td>磨金相</td>
                 </tr>
@@ -45,7 +45,7 @@
             </table>
 
             <h3 class="line">教育经历</h3>
-            <table>
+            <table width="480px">
                 <tr>
                     <td>学校名称:</td> <td>南京理工大学</td>
                     <td>所学专业:</td> <td>纳米材料</td>
