--- a/resume.html
+++ b/resume.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>我的个人简历</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/resume.css">
     <style>
 
     </style>
 </head>
+<!--加一个下载功能-->
 <body>
     <div class="main_div">
         <div class="image_div">
