--- a/resume.html
+++ b/resume.html
@@ -1,15 +1,108 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <title>我的个人简历</title>
-    <link rel="stylesheet" type="text/css" href="css/resume.css">
-    <style>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--========== The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags ==========-->
+    <title>我的个人简历(resume)</title>
 
-    </style>
+    <!--==========Dependency============-->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="vendors/owl-carousel/assets/owl.carousel.css">
+    <link rel="stylesheet" href="vendors/magnific-popup/magnific-popup.css">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit:500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700italic">
+    <link href='https://fonts.googleapis.com/css?family=Dosis:400,200,300,500,600,800,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:400,300,300italic,400italic">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500italic,500,700italic,700,900,900italic' rel='stylesheet' type='text/css'>
+
+    <!--==========Theme Styles==========-->
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/theme/green.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/resume.css">
+
+    <!--========== HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries ==========-->
+    <!--========== WARNING: Respond.js doesn't work if you view the page via file:// ==========-->
+    <!--==========[if lt IE 9]>
+    <script src="js/html5shiv.min.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]==========-->
 </head>
+<style>
+    .Black{
+        background-color: black;
+    }
+</style>
 <!--加一个下载功能-->
 <body>
+<header class="row transparent black header1" data-spy="affix" data-offset-top="0" id="header">
+    <div class="container Black">
+        <div class="row top-header">
+            <div class="col-sm-4 search-form-col">
+                <form action="#" method="get" class="search-form">
+                    <div class="input-group">
+                        <span class="input-group-addon"><img src="images/search-icon-white.png" alt=""></span>
+                        <input type="search" class="form-control" placeholder="search">
+                    </div>
+                </form>
+            </div>
+            <div class="col-sm-4 logo-col text-center">
+            </div>
+            <div class="col-sm-4 menu-trigger-col">
+                <button class="menu-trigger pull-right">
+                    <span class="active-page">home</span>
+                    <img src="images/menu-align-white.png" alt="" class="icon-burger">
+                    <img src="images/menu-close-white.png" alt="" class="icon-cross">
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="row menu-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 menu-col">
+                    <div class="row">
+                        <ul class="nav column-menu black-bg">
+                            <li class="active dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index2.html">2020-6月</a></li>
+                                    <!--跳转到home页的某一行-->
+                                    <li><a href="index3.html">Home Option 3</a></li>
+                                    <li><a href="index4.html">Home Option 4</a></li>
+                                    <li><a href="index5.html">Home Option 5</a></li>
+                                    <li><a href="index6.html">Home Option 6</a></li>
+                                </ul>
+                            </li>
+                            <li><a  href="resume.html">resume(个人简历)</a></li>
+                            <li><a href="single.html">my memery(我的回忆)</a></li>
+                            <li><a href="single2.html">my store(我的小店)</a></li>
+                        </ul>
+                        <ul class="nav column-menu black-bg">
+                            <li><a href="single3.html">I'm reading(最近在读)</a></li>
+                            <li><a href="single3.html">I'm doing(最近在做)</a></li>
+                            <li><a href="https://github.com/shilei31415">github</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4 subscribe-col">
+                    <!--右侧空间-->
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="main_div">
         <div class="image_div">
         </div>
@@ -93,5 +186,15 @@
             <a href="index.html"><h2>learn more</h2></a>
         </div>
     </div>
+<!--========== jQuery (necessary for Bootstrap's JavaScript plugins) ==========-->
+<script src="js/jquery-2.2.0.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+<script src="vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
+<script src="vendors/instafeed/instafeed.min.js"></script>
+<script src="vendors/imagesLoaded/imagesloaded.pkgd.min.js"></script>
+<script src="vendors/isotope/isotope.pkgd.min.js"></script>
+<script src="js/theme.js"></script>
+
 </body>
 </html>
