--- a/resume2.html
+++ b/resume2.html
@@ -1,10 +1,264 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--========== The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags ==========-->
+    <title>resume(个人简历)</title>
+
+    <!--==========Dependency============-->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="vendors/owl-carousel/assets/owl.carousel.css">
+    <link rel="stylesheet" href="vendors/magnific-popup/magnific-popup.css">
+    <link rel="stylesheet" href="vendors/flexslider/flexslider.css">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit:500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700italic">
+    <link href='https://fonts.googleapis.com/css?family=Dosis:400,200,300,500,600,800,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:400,300,300italic,400italic">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500italic,500,700italic,700,900,900italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
+
+    <!--==========Theme Styles==========-->
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/theme/green.css" rel="stylesheet">
+
+    <!--========== HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries ==========-->
+    <!--========== WARNING: Respond.js doesn't work if you view the page via file:// ==========-->
+    <!--==========[if lt IE 9]>
+    <script src="js/html5shiv.min.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]==========-->
 </head>
+<style>
+    .Black{
+        background-color: green;
+    }
+</style>
 <body>
 
+<header class="row transparent white" data-spy="affix" data-offset-top="300" id="header">
+    <div class="container">
+        <div class="row top-header">
+            <div class="col-sm-4 search-form-col">
+                <form action="#" method="get" class="search-form">
+                    <div class="input-group">
+                        <span class="input-group-addon"><img src="images/search-icon-dark.png" alt=""></span>
+                        <input type="search" class="form-control" placeholder="search">
+                    </div>
+                </form>
+            </div>
+            <div class="col-sm-4 logo-col text-center">
+                <h3>The world of 施磊</h3>
+            </div>
+            <div class="col-sm-4 menu-trigger-col">
+                <button class="menu-trigger black pull-right">
+                    <span class="active-page">Blog Details</span>
+                    <img src="images/menu-align-dark.png" alt="" class="icon-burger">
+                    <img src="images/menu-close-dark.png" alt="" class="icon-cross">
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="row menu-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 menu-col">
+                    <div class="row">
+                        <ul class="nav column-menu white-bg">
+                            <li class="active dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index2.html">2020-6月</a></li>
+                                    <li><a href="index3.html">Home Option 3</a></li>
+                                    <li><a href="index4.html">Home Option 4</a></li>
+                                    <li><a href="index5.html">Home Option 5</a></li>
+                                    <li><a href="index6.html">Home Option 6</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="resume.html">resume(个人简历)</a></li>
+                            <li><a href="single.html">my memery(我的回忆)</a></li>
+                            <li><a href="single2.html">my store(我的小店)</a></li>
+                        </ul>
+                        <ul class="nav column-menu white-bg">
+                            <li><a href="single3.html">I'm reading(最近在读)</a></li>
+                            <li><a href="single3.html">I'm doing(最近在做)</a></li>
+                            <li><a href="https://github.com/shilei31415">github</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4 subscribe-col">
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
+<section class="row content-wrap">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 single-post-contents">
+                <article class="single-post-content row m0 post">
+                    <div class="row" style="background-color: #3f4160">
+                        <table>
+                            <tr>
+                                <td><img src="images/resume/me_on_resume.jpg" class="img-responsive"></td>
+                                <td>
+                                    <div class="col-sm-12">
+                                        <p style="color:#ffffff; font-family:微软雅黑; font-size:18pt; font-style:normal; font-variant:normal; font-weight:normal">施磊</p>
+                                    </div>
+                                    <div class="col-sm-12">
+                                        <span style="font-family:'Times New Roman'; font-size:12pt; font-style:normal; font-variant:normal">&#xa0;</span>
+                                        <img src="images/resume/002.png">
+                                        <span style="color:#ffffff; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">目前正在找工作 </span>
+                                        <span style="font-family:'Times New Roman'; font-size:12pt; font-style:normal; font-variant:normal">&#xa0;</span>
+                                        <img src="images/resume/003.png">
+                                        <span style="color:#ffffff; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">13708702078 </span>
+                                        <span style="font-family:'Times New Roman'; font-size:12pt; font-style:normal; font-variant:normal">&#xa0;</span>
+                                        <img src="images/resume/004.png">
+                                        <span style="color:#ffffff; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2055833480@qq.com</span>
+                                    </div>
+                                    <div class="col-sm-12">
+                                        <span style="font-family:'Times New Roman'; font-size:12pt; font-style:normal; font-variant:normal">&#xa0;</span>
+                                        <img src="images/resume/005.png">
+                                        <span style="color:#ffffff; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">男|20 岁 (1999/11/29)</span>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <p style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">求职意向</p>
+                            <div class="col-sm-4">
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">工作类型：</p>
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">职位：</p>
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">薪资：</p>
+                            </div>
+                            <div class="col-sm-4">
+                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">全职</p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">机器视觉工程师</p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">8000元/月</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <p style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">学历/学位</p>
+                            <div class="col-sm-4">
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">专业：</p>
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">学校：</p>
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">学历/学位：</p>
+                            </div>
+                            <div class="col-sm-4">
+                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">纳米材料</p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">南京理工大学</p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">本科</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <p style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">项目经验</p>
+                            <div class="col-sm-2">
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2019/10</p>
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">项目描述：</p>
+                            </div>
+                            <div class="col-sm-10">
+                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:bold">1:10无人车多车交互赛</p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
+                                    在遵守交通规则的前提下，完成直线行驶、变道超车，变道避障、在斑马线前停车。<br>
+
+                                    1.从摄像头中获取图像。<br>
+
+                                    2.利用霍夫直线变换，识别道路标线。同通过串口，控制无人车底盘运动，达到直线行驶的目的。<br>
+
+                                    3.识别道路中的斑马线（停车线），并控制底盘减速停车。<br>
+
+                                    4.通过激光雷达判断前方是否有障碍物，并控制底盘变道。</p>
+
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="col-sm-2">
+                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2020/5-至今</p>
+                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">项目描述：</p>
+                                </div>
+                                <div class="col-sm-10">
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:bold">
+
+                                        个人github.io博客</p>
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
+                                        建立属于自己的github.io博客，用于介绍自己，并不定期更新<br>
+
+                                        1.在本地电脑编写html网页。<br>
+
+                                        2.将相关文件上传至github</p>
+
+                                </div>
+                            </div>
+                    </div>
+
+                </article>
+            </div>
+            <div class="col-md-4 sidebar">
+                <!--Author Widget-->
+                <aside class="row m0 widget-author widget">
+                    <div class="widget-author-inner row">
+                        <div class="author-avatar row"><a href="#"><img src="images/author.jpg" alt="" class="img-circle"></a></div>
+                        <a href="#"><h2 class="author-name">施磊</h2></a>
+                        <h5 class="author-title">My resume</h5>
+                        <p>利用html编写自己的简历,希望给interviewer更加生动的自我介绍</p>
+                        <a href="resume.doc" class="know-more">download</a>
+                    </div>
+                </aside>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--Footer-->
+<footer class="row" id="footer">
+    <div class="container">
+        <div class="row top-footer">
+            <div class="widget col-sm-3 widget-about">
+                <h3>The world of 施磊</h3>
+            </div>
+            <div class="widget col-sm-5 widget-menu">
+                <div class="row">
+                    <ul class="nav column-menu white-bg">
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="resume.html">resume</a></li>
+                        <li><a href="single.html">my memery</a></li>
+                        <li><a href="single2.html">my store</a></li>
+                    </ul>
+                    <ul class="nav column-menu white-bg">
+                        <li><a href="single3.html">I'm reading</a></li>
+                        <li><a href="single3.html">I'm doing</a></li>
+                        <li><a href="https://github.com/shilei31415">github</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="widget col-sm-4 widget-subscribe">
+
+            </div>
+        </div>
+        <h5 class="copyright">Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></h5>
+    </div>
+</footer>
+
+<!--========== jQuery (necessary for Bootstrap's JavaScript plugins) ==========-->
+<script src="js/jquery-2.2.0.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+<script src="vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
+<script src="vendors/instafeed/instafeed.min.js"></script>
+<script src="vendors/imagesLoaded/imagesloaded.pkgd.min.js"></script>
+<script src="vendors/isotope/isotope.pkgd.min.js"></script>
+<script src="vendors/flexslider/jquery.flexslider-min.js"></script>
+<script src="js/theme.js"></script>
 </body>
 </html>
