--- a/resume.html
+++ b/resume.html
@@ -103,7 +103,7 @@
         <div class="row">
             <div class="col-md-8 single-post-contents">
                 <article class="single-post-content row m0 post">
-                    <div class="row" style="background-color: #3f4160">
+                    <div class="row" style="background-color: #3f4160; border-collapse:collapse">
                         <table>
                             <tr>
                                 <td><img src="images/resume/me_on_resume.jpg" class="img-responsive"></td>
@@ -131,7 +131,7 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="row">
+                    <div class="row" style="background-color: #f8f9fa">
                         <div class="col-sm-6">
                             <p style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">求职意向</p>
                             <div class="col-sm-4">
@@ -159,7 +159,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" >
                         <div class="col-sm-12">
                             <p style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">项目经验</p>
                             <div class="col-sm-2">
@@ -199,6 +199,57 @@
                                         2.将相关文件上传至github</p>
 
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" style="border-top:1px solid #F0F0F0">
+                        <div class="col-sm-12">
+                            <p style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">在校情况</p>
+                            <div class="col-sm-12" style="background-color: #F0F0F0">
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">校内荣誉</p>
+                            </div>
+                            <div class="col-sm-12">
+                                <p> </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" style="border-top:1px solid #F0F0F0">
+                        <div class="col-sm-12">
+                            <span style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">技能特长</span>
+                            <span style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">（包含IT技能、语言能力、证书、成绩、培训经历）</span>
+                            <div class="col-sm-12" style="background-color: #F0F0F0">
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">技能/语言</p>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">Tensorflow(DL、CNN、DQN)</div>
+                                <img src="images/resume/006.png">
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">Word、Excel、PowerPoint</div>
+                                <img src="images/resume/006.png">
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">OpenCV</div>
+                                <img src="images/resume/006.png">
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">C/C++</div>
+                                <img src="images/resume/006.png">
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">Arduino</div>
+                                <img src="images/resume/007.png">
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">HTML5</div>
+                                <img src="images/resume/007.png">
+                            </div>
+                            <div class="col-sm-12" style="background-color: #F0F0F0">
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">证书</p>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2015/2</div>
+                                <span style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">大学英语四级</span>
                             </div>
                         </div>
                     </div>
